--- a/src/app/pages/events/ic/template.pug
+++ b/src/app/pages/events/ic/template.pug
@@ -1,8 +1,6 @@
 //put the menu somewhere in the page
-app-main-menu
-
 .marketing-site-hero
-    .marketing-site-hero-content
+    .wrapper
         h1 <b>Unbox</b> your ideas. Sustainably.
         |     
         h1.subheader
@@ -16,21 +14,41 @@ app-main-menu
         h4 Build your idea | Showcase your project
 
         
-.content
-    div
+.about
+    h2 What is Innovation Challenge?
+    div.left
         img(src='{{ ic_logo | cd:"w_350,c_fill"}}')
-    div
-        h3 What is Innovation Challenge?
+    div.right
         p The Innovation Challenge is a two-way opportunity for creative-minded students and business organizations. The students, guided by experienced mentors, are able to liberate their imagination and solve business-related problems, while the companies benefit from the ideas of fresh-minded students. During the challenge, the participants will investigate a real-life case, form teams, brainstorm solutions and pitch their ideas to the judges. The best idea wins the award!
         span December 1 | 8.30
-        span ECE Campus, Marconistraat 16
+        span ECE Campus
+        span Marconistraat 16
+        
+.signup
     div
-        img(src='{{ svm_logo | cd:"w_350,c_fill"}}')
-    div
-        h3 Stichting Verpakking en Milieu
-        p The aim of Stichting Verpakking en Milieu (SVM) is to create a sustainable community by offering environmentally friendly product packaging methods. The SVM has been contributing to the environmental protection on a global scale since 1971, when the founders of the company first published the report “Limits to Growth”. Thereupon, SVM has been representing its own packaging chains with reuse-recycle objectives for the public and private sectors and in collaboration with the customers. Nowadays, the company manages the funds remained from the contributions of more than 200 associated organizations.
-        p During the Innovation Challenge, students will study the importance of minimizing the harmful impact of the manufacturing industry on the environment and will have the opportunity to generate their own ideas of creating sustainable packaging, thus contributing to socio-ecological betterment.
+        h2 Sign Up.
+        .right
+            input#email.form-control(type='email', placeholder='name@email.com' name='email')
+            button(type='submit') Submit
 
+.agenda
+    .left
+        h2 Agenda
+    .right
+        ul
+            li(*ngFor="let item of agenda")
+               | {{ item.time }}
+               br
+               | {{ item.event }}
+
+.endorsements
+    div
+        h2 Endorsements
+        
+        div(*ngFor="let item of endorsements")
+            span.heart(*appTimes="item.number")
+            .message "{{ item.message }}"
+            .person {{ item.person }}
 
 
 
