some more stuff

--- a/src/app/pages/events/idealab/template.pug
+++ b/src/app/pages/events/idealab/template.pug
@@ -14,7 +14,13 @@
         p ECE Students’ IdeaLab is back! Starting in January 2018 we offer a series of startup consultancy events where you can experience the dynamics of working for a young venture. This time we will take a close look at the Sharing Economy.
         p Develop ideas. Disrupt ownership.
         p The Sharing Economy spans into a variety of areas in everyday life - ride-sharing services such as Greenwheels or OV fiets, co-working spaces like WeWork, hotel competitors like AirBnB or just the good old property rental. For IdeaLab we bring together startups that are built around one basic idea: enabling people to borrow or rent assets to and from others to create a greater benefit for all.
-        p This time, the following companies will join us: Djeepo offers an innovative platform to help you lend or find cheap storage around the corner. With Gearbooker you can get your hands on that top notch camera system you’ve been dreaming about. And Felyx lets you rent both the coolest and greenest two-wheelers in town. Together with them you get the chance to tap into that entrepreneurial spirit!
+        p This time, the following companies will join us:
+            a(href="https://www.djeepo.com", target="_blank") Djeepo
+            | offers an innovative platform to help you lend or find cheap storage around the corner. With
+            a(href="https://www.gearbooker.com", target="_blank") Gearbooker
+            | you can get your hands on that top notch camera system you’ve been dreaming about. And
+            a(href="https://felyx.nl", target="_blank") Felyx
+            | lets you rent both the coolest and greenest two-wheelers in town. Together with them you get the chance to tap into that entrepreneurial spirit!
         p During an intensive workshop you will develop solutions for a real-life business challenge and pitch your final results to the startups. Also you can interact with the companies on a personal level to broaden your network for collaborations, internships, mentoring and - of course - to share a great experience!
         span January 16th | 13:00 - 17:00
         span Erasmus University Rotterdam
@@ -22,10 +28,11 @@
 
 .signup
     div
-        h2 Sign Up.
+        h2 Develop innovative solutions for startups in the sharing economy.
         .right
-            input#email.form-control(type='email', placeholder='name@email.com' name='email')
-            button(type='submit') Submit
+
+            button(type='submit')
+                a(href="https://ecestudents2017.typeform.com/to/t970kV") Sign Up.
 
 .agenda
     .left
@@ -33,12 +40,12 @@
     .right
         ul
             li(*ngFor="let item of agenda")
-               | {{ item.time }}
+               span.time {{ item.time }}
                br
                ng-container(*ngFor="let p of item.event")
                 | {{ p.text }}
                 br
-.endorsements
+//.endorsements
     div
         h2 Endorsements
 
