--- a/src/style_imports/_events.scss
+++ b/src/style_imports/_events.scss
@@ -27,7 +27,7 @@
 
         img {
             max-width: 100%;
-            @include bp(medium){
+            @include bp(medium) {
                 max-width: 600px;
             }
         }
@@ -175,6 +175,10 @@
         list-style: none;
         margin: 0;
         li {
+            .time {
+                font-weight: 800;
+            }
+
             font-weight: 400;
             font-size: 18px;
             font-family: Aleo;
@@ -241,22 +245,21 @@
             margin-top: 0;
         }
         .heart {
-            @include fa(heart, 20, white)
-            font-size: 25px;
+            @include fa(heart, 20, white) font-size: 25px;
         }
 
         >div {
             justify-self: center;
             text-align: center;
             font-size: 20px;
-            
-            .message{
+
+            .message {
                 font-family: Aleo;
                 margin-top: ms(0);
                 text-align: left;
                 font-weight: 400;
             }
-            .person{
+            .person {
                 font-family: Aleo;
                 font-style: italic;
                 font-weight: 300;
