less ugly menu links

--- a/src/app/parts/main_menu/style.scss
+++ b/src/app/parts/main_menu/style.scss
@@ -9,9 +9,18 @@ nav {
         z-index: 2;
     }
 
+    a,
+    a:visited {
+        color: initial;
+    }
+
     .togglewrap {
         display: grid;
         grid-template-columns: ms(1) 1fr auto 1fr ms(1);
+
+        img {
+            height: 80px;
+        }
 
         button {
             @include fa(list, ms(1), $ece-black);
@@ -34,6 +43,10 @@ nav {
     .logo {
         display: none;
 
+        img {
+            height: 100px;
+        }
+
         @include bp(medium) {
             display: block;
             filter: brightness(0) invert(1);
@@ -41,7 +54,7 @@ nav {
     }
 
     #menu {
-        
+
         &.toggled {
             display: none;
         }
@@ -49,8 +62,8 @@ nav {
         ul {
             @include menu-base;
             @include menu-direction("vertical");
-            
-            &.main{
+
+            &.main {
                 @include bp(medium) {
                     align-items: center;
                     justify-content: center;
@@ -75,7 +88,8 @@ nav {
         }
     }
 }
- @include bp(medium) {
+
+@include bp(medium) {
     .dropbtn {
         color: $white;
         font-family: MuseoSans;
@@ -84,37 +98,42 @@ nav {
         font-size: 20px;
         border: none;
         cursor: pointer;
-        -webkit-transition: all 0.3s ease;; /* Safari */
-        transition: all 0.3s ease;;
+        -webkit-transition: all 0.3s ease;
+        ;
+        /* Safari */
+        transition: all 0.3s ease;
+        ;
     }
-    
+
     .dropdown {
         position: relative;
         display: inline-block;
     }
-    
+
     .dropdown-content {
         display: none;
         position: absolute;
         background-color: #f9f9f9;
         min-width: 160px;
-        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
         z-index: 1;
     }
-    
+
     .dropdown-content a {
         color: black;
         padding: 12px 16px;
         text-decoration: none;
         display: block;
     }
-    
-    .dropdown-content a:hover {background-color: #f1f1f1}
-    
+
+    .dropdown-content a:hover {
+        background-color: #f1f1f1
+    }
+
     .dropdown:hover .dropdown-content {
         display: block;
     }
-    
+
     .dropdown:hover .dropbtn {
         color: $ece-black;
     }
@@ -123,76 +142,82 @@ nav {
 /* Icon 3 */
 
 #nav-icon3 span:nth-child(1) {
-  top: 0px;
+    top: 0px;
 }
 
-#nav-icon3 span:nth-child(2),#nav-icon3 span:nth-child(3) {
-  top: 11px;
+#nav-icon3 span:nth-child(2),
+#nav-icon3 span:nth-child(3) {
+    top: 11px;
 }
 
 #nav-icon3 span:nth-child(4) {
-  top: 22px;
+    top: 22px;
 }
 
 #nav-icon3.open span:nth-child(1) {
-  top: 18px;
-  width: 0%;
-  left: 50%;
+    top: 18px;
+    width: 0%;
+    left: 50%;
 }
 
 #nav-icon3.open span:nth-child(2) {
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
 }
 
 #nav-icon3.open span:nth-child(3) {
-  -webkit-transform: rotate(-45deg);
-  -moz-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
-  transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
 }
 
 #nav-icon3.open span:nth-child(4) {
-  top: 18px;
-  width: 0%;
-  left: 50%;
+    top: 18px;
+    width: 0%;
+    left: 50%;
 }
 
-#nav-icon1, #nav-icon2, #nav-icon3, #nav-icon4 {
-  width: 35px;
-  height: 30px;
-  position: relative;
-  margin: 25px auto;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: .5s ease-in-out;
-  -moz-transition: .5s ease-in-out;
-  -o-transition: .5s ease-in-out;
-  transition: .5s ease-in-out;
-  cursor: pointer;
-  align-items: center;
+#nav-icon1,
+#nav-icon2,
+#nav-icon3,
+#nav-icon4 {
+    width: 35px;
+    height: 30px;
+    position: relative;
+    margin: 25px auto;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .5s ease-in-out;
+    -moz-transition: .5s ease-in-out;
+    -o-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
+    cursor: pointer;
+    align-items: center;
     justify-content: center;
 }
 
-#nav-icon1 span, #nav-icon3 span, #nav-icon4 span {
-  display: block;
-  position: absolute;
-  height: 5px;
-  width: 100%;
-  background: #d3531a;
-  border-radius: 9px;
-  opacity: 1;
-  left: 0;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: .25s ease-in-out;
-  -moz-transition: .25s ease-in-out;
-  -o-transition: .25s ease-in-out;
-  transition: .25s ease-in-out;
+#nav-icon1 span,
+#nav-icon3 span,
+#nav-icon4 span {
+    display: block;
+    position: absolute;
+    height: 5px;
+    width: 100%;
+    background: #d3531a;
+    border-radius: 9px;
+    opacity: 1;
+    left: 0;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .25s ease-in-out;
+    -moz-transition: .25s ease-in-out;
+    -o-transition: .25s ease-in-out;
+    transition: .25s ease-in-out;
 }
