--- a/src/app/parts/footer/style.scss
+++ b/src/app/parts/footer/style.scss
@@ -1,168 +1,44 @@
 @import 'mixins';
 
-.banner {
-    font-family: MuseoSans;
-    margin: ms(2) 0;
-    padding: ms(3) 0;
-    background-image: cd("parts/footer/annie-spratt-61561.jpg", "w_1920,c_fill");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
+* {
+    margin: 0;
+    padding: 0;
+}
 
-    display: grid;
-    grid-template-areas: ". text . dates .";
-    grid-template-columns: 1fr auto 1fr auto 1fr;
+footer {
+    width: 100%;
+    background-color: #d9d9d9;
+    height: 400px;
+}
 
-    @include bp(large) {
-        grid-template-columns: 2fr auto 5fr auto 2fr;
-    }
-
-    color: white;
-
-    span {
-        color: $ece-orange;
-    }
-
-    .text {
-        
-        grid-area: text;
-        padding: ms(-1);
-
-        .title {
-            font-size: ms(1);
-            font-family: MuseoSans;
-            font-weight: 500;
-        }
-
-        div {
-            font-family: Aleo;
-            margin-bottom: ms(0);
-            font-size: ms(.7);
-            font-weight: 300;
-        }
-    }
-
-    .dates {
-        font-size: ms(1);
-        grid-area: dates;
-        padding: ms(-1);
-        text-align: center;
-
-        @include bp(large) {
-            margin-top: ms(5);
-            margin-bottom: ms(0);
-        }
-
-        .room {
-            color: $ece-blue;
-        }
+.social {
+    background-color: #d9d9d9;
+    display: block;
+    float: left;
+    margin-right: 400px;
+    margin-left: 50px;
+    
+}
+.social a {
+    margin-right:5px;
+    
+}
+.roadmap {
+    background-color: #d9d9d9;
+    float: left;
+    
+    margin-right: 400px;
+    ul {
+        @include menu-base;
+        @include menu-direction("vertical");
+        //text-align: left;
+        background-color: #d9d9d9 ;
+        //width: 15%;
+        //margin-left: 700px;
     }
 }
 
-.bottom {
-    display: grid;
-    grid-template: "contact" auto "title" auto "social" auto;
-    grid-gap: ms(-6);
-    align-items: center;
-    margin: ms(0);
-
-
-    @include bp(medium) {
-        grid-template: ". title title title ." auto 
-                        ". social . contact ." auto 
-                        / 3fr auto 2fr auto 3fr;
-    }
-
-        .follow {
-            grid-area: title;
-            color: $ece-blue;
-            font-size: ms(2);
-            @include bp(medium) {
-                font-size: ms(2);
-            }
-
-            margin-bottom: ms(1);
-        }
-
-    .social {
-        padding: 0;
-        padding-bottom: ms(2);
-        @include bp(medium) {
-            padding: 0 ms(1);
-        }
-
-
-        grid-area: social;
-
-        ul {
-            @include menu-base;
-            margin: 0;
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            li {
-                text-align: center;
-                .count {
-                    margin-top: ms(0);
-                    color: $ece-orange;
-                    font-size: ms(1);
-                }
-                .fb {
-                    @include fa-link(facebook, ms(2.5), $ece-black);
-                }
-
-                .ln {
-                    @include fa-link(linkedin, ms(2.5), $ece-black);
-                }
-
-                .twit {
-                    @include fa-link(twitter, ms(2.5), $ece-black);
-                }
-
-                .insta {
-                    @include fa-link(instagram, ms(2.5), $ece-black);
-                }
-            }
-        }
-    }
-
-    .contact {
-        grid-area: contact;
-        display: grid;
-        grid-template-columns: 1fr auto ms(2) auto 1fr;
-        align-items: center;
-        &>div {
-            font-size: ms(0);
-            font-family: MuseoSans;
-            font-weight: 500;
-            grid-column: 4;
-            display: inline-block;
-            vertical-align: middle;
-            margin-bottom: ms(0);
-            
-            @include bp(large){
-                font-size: ms(1);
-            }
-        }
-
-        .fa {
-            grid-column: 2;
-            width: 0;
-            &:before {
-                width: ms(1);
-                text-align: center;
-            }
-        }
-
-        .location {
-            @include fa(map-marker, ms(2));
-        }
-
-        .phone {
-            @include fa(mobile, ms(2));
-        }
-
-        .mail {
-            @include fa(envelope-o, ms(1));
-        }
-    }
+.googlemaps {
+    background-color: #d9d9d9;
+    float: left;
 }
