--- a/src/app/parts/main_menu/style.scss
+++ b/src/app/parts/main_menu/style.scss
@@ -2,16 +2,21 @@
 
 nav {
     @include wrapper;
+    a,
+    a:visited {
+        color: $ece-black;
+    }
+
     @include bp(medium) {
         display: flex;
         justify-content: space-between;
         margin-bottom: -100px;
         z-index: 2;
-    }
 
-    a,
-    a:visited {
-        color: initial;
+        a,
+        a:visited {
+            color: white;
+        }
     }
 
     .togglewrap {
@@ -119,11 +124,15 @@ nav {
         z-index: 1;
     }
 
-    .dropdown-content a {
-        color: black;
-        padding: 12px 16px;
-        text-decoration: none;
-        display: block;
+    .dropdown-content {
+
+        a,
+        a:visited {
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+        }
     }
 
     .dropdown-content a:hover {
