--- a/src/app/pages/events/ic/template.pug
+++ b/src/app/pages/events/ic/template.pug
@@ -1,17 +1,13 @@
 //put the menu somewhere in the page
 .marketing-site-hero
     .wrapper
-        h1 <b>Unbox</b> your ideas. Sustainably.
-        |     
-        h1.subheader
-          | Innovation Challenge
-        h3.sub 
-            span.bold December 
-            | 1, 2017
-        h3 ECE Campus, Marconistraat 16
-        a(target="_blank", href='https://ecestudents2017.typeform.com/to/nCDAKk') Sign Up
-        |
-        h4 Build your idea | Showcase your project
+        div.logo 
+            img(src='{{ ic_logo | cd:"w_150,c_fill"}}')
+            h1 Innovation Challenge
+        h2 Develop ideas. Disrupt ownership.
+        //h4 This is a tagline with some interesting text when Sansa woke up
+        div.fancybox
+            h3 January 16, 2018
 
         
 .about
