--- a/src/app/pages/events/idealab/template.pug
+++ b/src/app/pages/events/idealab/template.pug
@@ -4,7 +4,7 @@
         img(src='{{ white | cd:"w_600,c_fill"}}')
         h2 Develop ideas. Disrupt Ownership
         //h4 This is a tagline with some interesting text when Sansa woke up
-        h3 January 20, 2018
+        h3 January 16, 2018
 
 .about
     h2 Sharing Economy whenever we think is all there is around us.
@@ -12,9 +12,8 @@
         img(src='{{ logo | cd:"w_300,c_fill"}}')
     div.right
         p Yes! The Innovation Challenge is all about Rotterdam's main industry: the port. In collaboration with APM Terminals, we unite students with different backgrounds from TU Delft, RSM and ESE to take their best shot at solving the challenges of global trade players face.
-        span December 20 | 14.00
-        span Marconistraat 16
-        span ECE Campus
+        span January 16 | 13.00 - 17:00
+        span Erasmus University Rotterdam
 
 .signup
     div
