--- a/src/app/pages/events/idealab/template.pug
+++ b/src/app/pages/events/idealab/template.pug
@@ -11,7 +11,7 @@
     div.left
         img(src='{{ logo | cd:"w_300,c_fill"}}')
     div.right
-        p Yes! The Innovation Challenge is all about Rotterdam's main industry: the port. In collaboration with APM Terminals, we unite students with different backgrounds from TU Delft, RSM and ESE to take their best shot at solving the challenges of global trade players face.
+        p Idea generation is the first step to creating a solution people love. That’s why we created IdeaLab, where we crack startup cases as well as fine-tune our own ideas. Get a feel of what’s already out there and discuss your own concepts and ideas with fellow students who share your passion for entrepreneurship.
         span January 16 | 13.00 - 17:00
         span Erasmus University Rotterdam
 
