--- a/src/app/pages/events/sem/template.pug
+++ b/src/app/pages/events/sem/template.pug
@@ -11,7 +11,7 @@
     div.left
         img(src='{{ logo | cd:"w_300,c_fill"}}')
     div.right
-        p Yes! The Innovation Challenge is all about Rotterdam's main industry: the port. In collaboration with APM Terminals, we unite students with different backgrounds from TU Delft, RSM and ESE to take their best shot at solving the challenges of global trade players face.
+        p The Social Entrepreneurship Masterclass (SEM) is an event designed to coach students about starting their own social enterprise. Student teams take part in practical workshops and develop a business plan that tackles a social issue. In the end, participants pitch their ideas to a jury - and the winners will get to participate in ECE's 12-week startup programme. Get Started! 
         span December 20 | 14.00
         span Marconistraat 16
         span ECE Campus
