removed ic thing

--- a/src/app/pages/homepage/template.pug
+++ b/src/app/pages/homepage/template.pug
@@ -27,7 +27,7 @@
         p We provide all the resources — coaching, network, working space — to help anyone bring their ideas into the real world. Do you feel ready? Because we are.
 
 
-#innovation.container-fluid
+//#innovation.container-fluid
     .left
         img(src='{{ ic_logo | cd:"w_351,c_fill"}}')
     .right
